apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
      namespace: media
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1
      containers:
        - name: sonarr
          securityContext:
            privileged: true
          image: linuxserver/sonarr
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: mediamount
              mountPath: /mnt
              mountPropagation: HostToContainer
          resources:
            requests:
              nextflow.io/fuse: "1"
            limits:
              nextflow.io/fuse: "1"
      volumes:
        - name: mediamount
          persistentVolumeClaim:
            claimName: media-pvc
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
